--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>
-			Heic2any: Converting HEIF/HEIF image formats to PNG in the browser
+			Heic2any: Client-side conversion of HEIC/HEIF image files to JPEG,
+			PNG, or GIF in the browser.
 		</title>
 
 		<!--[if lt IE 9]>
@@ -82,7 +83,8 @@
 			<div class="container">
 				<h1 class="home-title">Heic2any</h1>
 				<p class="lead" style="font-size: 18px; margin-top: 25px;">
-					Converting HEIF/HEIF image formats to PNG in the browser
+					Client-side (browser-side, using Javascript) conversion of
+					HEIC/HEIF image files to JPEG, PNG, or GIF.
 				</p>
 				<p class="lead">
 					<a
