--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ $ yarn add heic2any</code></pre>
 			hljs.initHighlightingOnLoad();
 		</script>
 		<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-		<script src="https://raw.githack.com/jmalarcon/ie-web-worker/master/worker.js"></script>
+		<script src="https://cdn.githubraw.com/jmalarcon/ie-web-worker/master/worker.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bluebird/3.3.4/bluebird.min.js"></script>
 		<script src="./assets/script.js" type="text/javascript"></script>
 		<script src="./dist/heic2any.js" type="text/javascript"></script>
